--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.8",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "firebase": "^7.5.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "tailwindcss": "^1.1.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
